brat/test/golden/error/kvarnotfound.brat
f :: { Bit -o Bit }
f = { x => y }
