brat/test/golden/error/kvarnotfound.brat.golden
Error in test/golden/error/kvarnotfound.brat@2:12-13
f = { x => y }
           ^

  y not found in kernel context

